Fix z-index on calendar icons

--- a/css/site.styl
+++ b/css/site.styl
@@ -305,6 +305,7 @@ section#register
             height 32px
             background-repeat no-repeat
             background-image url('../images/calendar.png')
+            z-index 1000000
         input.datepicker+span:after
             margin 0px
             padding 0px
@@ -318,6 +319,7 @@ section#register
             height 32px
             background-repeat no-repeat
             background-image url('../images/calendar.png')
+            z-index 1000000
         input.datepicker+span
             margin 20px
             color #777
